Revert "Fix overflowing scroll section in Copilot Sources Modal (#4428)"
This reverts commit 402968112d8630378966b77d3546a3171b0aaabd.
Because it caused e2e tests to fail.

--- a/phytoplankton-console/src/pages/case-management/components/Copilot/index.module.less
+++ b/phytoplankton-console/src/pages/case-management/components/Copilot/index.module.less
@@ -17,8 +17,3 @@
   justify-content: space-between;
   width: 100%;
 }
-
-.table {
-  overflow-x: auto;
-  overflow-y: auto;
-}
